Closed
Bug 357531
Opened 19 years ago
Closed 19 years ago
[reflow branch] ASSERTION: space manager should be present
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Unassigned)
References
Details
(Keywords: assertion, testcase, Whiteboard: [first letter])
Attachments
(2 files)
###!!! ASSERTION: space manager should be present iff not doing intrinsic widths: '!aSpaceManager == aIntrinsicWidthPass', file nsLineLayout.cpp, line 165
...
###!!! ASSERTION: reflow dirty lines failed: 'NS_SUCCEEDED(rv)', file nsBlockFrame.cpp, line 884
STEPS TO REPRODUCE
1. Load the attached testcase
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
Comment 3•19 years ago
|
||
This looks like a bug in nsFirstLetterFrame::Reflow -- when floating it constructs its own line layout, and it should be passing a space manager to it, I would think.
Maybe I should just drop the assertion -- there's no real need for a space manager here. (And I removed the aIntrinsicWidthPass stuff).
But the "reflow dirty lines failed" assertion is more serious.
Summary: [reflow branch] ASSERTION: space manager should be present iff not doing intrinsic widths: '!aSpaceManager == aIntrinsicWidthPass', file nsLineLayout.cpp, line 165 → [reflow branch] ASSERTION: space manager should be present
Whiteboard: [first letter]
I fixed the space manager assertion by checking for first letter frames:
Checking in nsLineLayout.cpp;
/cvsroot/mozilla/layout/generic/nsLineLayout.cpp,v <-- nsLineLayout.cpp
new revision: 3.239.2.4; previous revision: 3.239.2.3
done
I still want to look into the other assertion which is caused by:
WARNING: Content has no document.: file /builds/reflow/mozilla/layout/generic/nsTextFrame.cpp, line 5975
and is perhaps the same problem that led me to comment out an assertion on balsa.
Actually, I'm marking this fixed, and I'll file a new bug on the other assertions.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•