Fix space manager assertion in first-letter cases.  b=357531